# OpenSIPS

./: .gitignore  CMakeLists.txt  Makefile  Makefile.rules  cfg.y  make-mod-tls.sh  make-tls.sh  tcp_main.c  timer.c
modules/tlsops/: tls_select.c  tls_select.h  tlsops.c
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
tls/: tls_config.c  tls_config.h  tls_init.c  tls_server.c
