cmake_minimum_required(VERSION 3.2)
project(opensips_1_11_2_tls)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(Boost_USE_STATIC_LIBS OFF)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost)
include_directories(${Boost_INCLUDE_DIRS})
include_directories(/usr/local/include)

add_definitions(-DPKG_MALLOC)
add_definitions(-DSHM_MEM)
add_definitions(-DSHM_MMAP)
add_definitions(-DUSE_IPV6)
add_definitions(-DUSE_MCAST)
add_definitions(-DDISABLE_NAGLE)
add_definitions(-DSTATISTICS)
add_definitions(-DCHANGEABLE_DEBUG_LEVEL)
add_definitions(-DHAVE_RESOLV_RES)
add_definitions(-DF_MALLOC)
add_definitions(-DUSE_TCP)
add_definitions(-DUSE_TLS)
add_definitions(-DFAST_LOCK)
add_definitions(-DADAPTIVE_WAIT)
add_definitions(-DADAPTIVE_WAIT_LOOPS=1024)
add_definitions(-DHAVE_GETHOSTBYNAME2)
add_definitions(-DHAVE_UNION_SEMUN)
add_definitions(-DHAVE_SCHED_YIELD)
add_definitions(-DHAVE_MSG_NOSIGNAL)
add_definitions(-DHAVE_MSGHDR_MSG_CONTROL)
add_definitions(-DHAVE_ALLOCA_H)
add_definitions(-DHAVE_TIMEGM)
add_definitions(-DHAVE_EPOLL)
add_definitions(-DHAVE_SIGIO_RT)
add_definitions(-DHAVE_SELECT)

add_definitions(-DNAME='"opensips"')
add_definitions(-DVERSION='"1.11.2-tls"')
add_definitions(-DARCH='"x86_64"')
add_definitions(-DOS='"linux"')

set(SOURCE_FILES
    aaa/aaa.c
    aaa/aaa.h
    aaa/aaa_avp.h
    cachedb/example/example_cachedb.c
    cachedb/cachedb.c
    cachedb/cachedb.h
    cachedb/cachedb_cap.h
    cachedb/cachedb_con.h
    cachedb/cachedb_id.c
    cachedb/cachedb_id.h
    cachedb/cachedb_pool.c
    cachedb/cachedb_pool.h
    db/example/dbexample.c
    db/db.c
    db/db.h
    db/db_cap.h
    db/db_con.h
    db/db_id.c
    db/db_id.h
    db/db_insertq.c
    db/db_insertq.h
    db/db_key.h
    db/db_op.h
    db/db_pool.c
    db/db_pool.h
    db/db_ps.h
    db/db_query.c
    db/db_query.h
    db/db_res.c
    db/db_res.h
    db/db_row.c
    db/db_row.h
    db/db_ut.c
    db/db_ut.h
    db/db_val.h
    evi/event_interface.c
    evi/event_interface.h
    evi/evi.h
    evi/evi_core.c
    evi/evi_core.h
    evi/evi_modules.h
    evi/evi_params.c
    evi/evi_params.h
    evi/evi_transport.c
    evi/evi_transport.h
    mem/f_malloc.c
    mem/f_malloc.h
    mem/hp_malloc.c
    mem/hp_malloc.h
    mem/hp_malloc_stats.c
    mem/hp_malloc_stats.h
    mem/mem.c
    mem/mem.h
    mem/meminfo.h
    mem/memtest.c
    mem/q_malloc.c
    mem/q_malloc.h
    mem/shm_mem.c
    mem/shm_mem.h
    mem/vq_malloc.c
    mem/vq_malloc.h
    menuconfig/cfg.c
    menuconfig/cfg.h
    menuconfig/commands.c
    menuconfig/commands.h
    menuconfig/curses.c
    menuconfig/curses.h
    menuconfig/items.c
    menuconfig/items.h
    menuconfig/main.c
    menuconfig/main.h
    menuconfig/menus.c
    menuconfig/menus.h
    menuconfig/parser.c
    menuconfig/parser.h
    mi/attr.c
    mi/attr.h
    mi/fmt.c
    mi/fmt.h
    mi/mi.c
    mi/mi.h
    mi/mi_core.c
    mi/mi_core.h
    mi/tree.c
    mi/tree.h
    modules/aaa_radius/aaa_radius.c
    modules/aaa_radius/rad.c
    modules/aaa_radius/rad.h
    modules/acc/acc.c
    modules/acc/acc.h
    modules/acc/acc_extra.c
    modules/acc/acc_extra.h
    modules/acc/acc_logic.c
    modules/acc/acc_logic.h
    modules/acc/acc_mod.c
    modules/acc/acc_mod.h
    modules/acc/diam_avp.c
    modules/acc/diam_dict.h
    modules/acc/diam_message.c
    modules/acc/diam_message.h
    modules/acc/diam_tcp.c
    modules/acc/diam_tcp.h
    modules/alias_db/alias_db.c
    modules/alias_db/alias_db.h
    modules/alias_db/alookup.c
    modules/alias_db/alookup.h
    modules/auth/api.c
    modules/auth/api.h
    modules/auth/auth_mod.c
    modules/auth/auth_mod.h
    modules/auth/challenge.c
    modules/auth/challenge.h
    modules/auth/common.c
    modules/auth/common.h
    modules/auth/index.c
    modules/auth/index.h
    modules/auth/nonce.c
    modules/auth/nonce.h
    modules/auth/rfc2617.c
    modules/auth/rfc2617.h
    modules/auth/rpid.c
    modules/auth/rpid.h
    modules/auth_aaa/authaaa_mod.c
    modules/auth_aaa/authaaa_mod.h
    modules/auth_aaa/authorize.c
    modules/auth_aaa/authorize.h
    modules/auth_aaa/sterman.c
    modules/auth_aaa/sterman.h
    modules/auth_db/aaa_avps.h
    modules/auth_db/authdb_mod.c
    modules/auth_db/authdb_mod.h
    modules/auth_db/authorize.c
    modules/auth_db/authorize.h
    modules/auth_diameter/auth_diameter.c
    modules/auth_diameter/auth_diameter.h
    modules/auth_diameter/authorize.c
    modules/auth_diameter/authorize.h
    modules/auth_diameter/avp.c
    modules/auth_diameter/defs.h
    modules/auth_diameter/diameter_msg.h
    modules/auth_diameter/message.c
    modules/auth_diameter/tcp_comm.c
    modules/auth_diameter/tcp_comm.h
    modules/auth_diameter/user_in.c
    modules/avpops/avpops.c
    modules/avpops/avpops_db.c
    modules/avpops/avpops_db.h
    modules/avpops/avpops_impl.c
    modules/avpops/avpops_impl.h
    modules/avpops/avpops_parse.c
    modules/avpops/avpops_parse.h
    modules/b2b_entities/b2b_common.h
    modules/b2b_entities/b2b_entities.c
    modules/b2b_entities/b2b_entities.h
    modules/b2b_entities/b2be_db.c
    modules/b2b_entities/b2be_db.h
    modules/b2b_entities/client.c
    modules/b2b_entities/client.h
    modules/b2b_entities/dlg.c
    modules/b2b_entities/dlg.h
    modules/b2b_entities/server.c
    modules/b2b_entities/server.h
    modules/b2b_logic/b2b_load.h
    modules/b2b_logic/b2b_logic.c
    modules/b2b_logic/b2b_logic.h
    modules/b2b_logic/b2bl_db.c
    modules/b2b_logic/b2bl_db.h
    modules/b2b_logic/logic.c
    modules/b2b_logic/pidf.c
    modules/b2b_logic/pidf.h
    modules/b2b_logic/records.c
    modules/b2b_logic/records.h
    modules/b2b_sca/b2b_sca.c
    modules/b2b_sca/sca_db_handler.c
    modules/b2b_sca/sca_db_handler.h
    modules/b2b_sca/sca_logic.c
    modules/b2b_sca/sca_logic.h
    modules/b2b_sca/sca_records.c
    modules/b2b_sca/sca_records.h
    modules/benchmark/benchmark.c
    modules/benchmark/benchmark.h
    modules/benchmark/benchmark_api.h
    modules/cachedb_cassandra/cachedb_cassandra.c
    modules/cachedb_cassandra/cachedb_cassandra.h
    modules/cachedb_cassandra/cachedb_cassandra_dbase.cpp
    modules/cachedb_cassandra/cachedb_cassandra_dbase.h
    modules/cachedb_cassandra/cachedb_cassandra_lib.h
    modules/cachedb_cassandra/Cassandra.cpp
    modules/cachedb_cassandra/Cassandra.h
    modules/cachedb_cassandra/cassandra_constants.cpp
    modules/cachedb_cassandra/cassandra_constants.h
    modules/cachedb_cassandra/cassandra_types.cpp
    modules/cachedb_cassandra/cassandra_types.h
    modules/cachedb_couchbase/cachedb_couchbase.c
    modules/cachedb_couchbase/cachedb_couchbase_dbase.c
    modules/cachedb_couchbase/cachedb_couchbase_dbase.h
    modules/cachedb_local/cachedb_local.c
    modules/cachedb_local/cachedb_local.h
    modules/cachedb_local/hash.c
    modules/cachedb_local/hash.h
    modules/cachedb_memcached/cachedb_memcached.c
    modules/cachedb_memcached/cachedb_memcached.h
    modules/cachedb_mongodb/cachedb_mongodb.c
    modules/cachedb_mongodb/cachedb_mongodb_dbase.c
    modules/cachedb_mongodb/cachedb_mongodb_dbase.h
    modules/cachedb_mongodb/cachedb_mongodb_json.c
    modules/cachedb_mongodb/cachedb_mongodb_json.h
    modules/cachedb_redis/cachedb_redis.c
    modules/cachedb_redis/cachedb_redis_dbase.c
    modules/cachedb_redis/cachedb_redis_dbase.h
    modules/cachedb_redis/cachedb_redis_utils.c
    modules/cachedb_redis/cachedb_redis_utils.h
    modules/cachedb_sql/cachedb_sql.c
    modules/call_center/call_center.c
    modules/call_center/cc_data.c
    modules/call_center/cc_data.h
    modules/call_center/cc_db.c
    modules/call_center/cc_db.h
    modules/call_center/cc_queue.c
    modules/call_center/cc_queue.h
    modules/call_control/call_control.c
    modules/carrierroute/carrier_tree.c
    modules/carrierroute/carrier_tree.h
    modules/carrierroute/carrierroute.c
    modules/carrierroute/carrierroute.h
    modules/carrierroute/load_data.c
    modules/carrierroute/load_data.h
    modules/carrierroute/route.h
    modules/carrierroute/route_config.c
    modules/carrierroute/route_config.h
    modules/carrierroute/route_db.c
    modules/carrierroute/route_db.h
    modules/carrierroute/route_fifo.c
    modules/carrierroute/route_fifo.h
    modules/carrierroute/route_func.c
    modules/carrierroute/route_func.h
    modules/carrierroute/route_rule.c
    modules/carrierroute/route_rule.h
    modules/carrierroute/route_tree.c
    modules/carrierroute/route_tree.h
    modules/cfgutils/cfgutils.c
    modules/cfgutils/env_var.c
    modules/cfgutils/env_var.h
    modules/cfgutils/script_locks.c
    modules/cfgutils/script_locks.h
    modules/cfgutils/shvar.c
    modules/cfgutils/shvar.h
    modules/closeddial/cdlookup.c
    modules/closeddial/cdlookup.h
    modules/closeddial/closeddial.c
    modules/closeddial/closeddial.h
    modules/cpl-c/cpl.c
    modules/cpl-c/cpl_db.c
    modules/cpl-c/cpl_db.h
    modules/cpl-c/cpl_env.h
    modules/cpl-c/cpl_loader.c
    modules/cpl-c/cpl_loader.h
    modules/cpl-c/cpl_log.c
    modules/cpl-c/cpl_log.h
    modules/cpl-c/cpl_nonsig.c
    modules/cpl-c/cpl_nonsig.h
    modules/cpl-c/cpl_parser.c
    modules/cpl-c/cpl_parser.h
    modules/cpl-c/cpl_proxy.h
    modules/cpl-c/cpl_run.c
    modules/cpl-c/cpl_run.h
    modules/cpl-c/cpl_sig.c
    modules/cpl-c/cpl_sig.h
    modules/cpl-c/cpl_switches.h
    modules/cpl-c/CPL_tree.h
    modules/cpl-c/cpl_utils.h
    modules/cpl-c/loc_set.h
    modules/cpl-c/sub_list.c
    modules/cpl-c/sub_list.h
    modules/db_berkeley/bdb_lib.c
    modules/db_berkeley/bdb_lib.h
    modules/db_berkeley/bdb_mi.c
    modules/db_berkeley/bdb_mi.h
    modules/db_berkeley/bdb_res.c
    modules/db_berkeley/bdb_res.h
    modules/db_berkeley/bdb_util.c
    modules/db_berkeley/bdb_util.h
    modules/db_berkeley/bdb_val.c
    modules/db_berkeley/bdb_val.h
    modules/db_berkeley/db_berkeley.c
    modules/db_berkeley/db_berkeley.h
    modules/db_cachedb/db_cachedb.c
    modules/db_cachedb/dbase.c
    modules/db_cachedb/dbase.h
    modules/db_flatstore/flat_con.c
    modules/db_flatstore/flat_con.h
    modules/db_flatstore/flat_id.c
    modules/db_flatstore/flat_id.h
    modules/db_flatstore/flat_mi.c
    modules/db_flatstore/flat_mi.h
    modules/db_flatstore/flat_pool.c
    modules/db_flatstore/flat_pool.h
    modules/db_flatstore/flatstore.c
    modules/db_flatstore/flatstore.h
    modules/db_flatstore/flatstore_mod.c
    modules/db_flatstore/flatstore_mod.h
    modules/db_http/db_http.c
    modules/db_http/db_http.h
    modules/db_http/http_dbase.c
    modules/db_http/http_dbase.h
    modules/db_mysql/db_mysql.c
    modules/db_mysql/db_mysql.h
    modules/db_mysql/dbase.c
    modules/db_mysql/dbase.h
    modules/db_mysql/my_con.c
    modules/db_mysql/my_con.h
    modules/db_mysql/res.c
    modules/db_mysql/res.h
    modules/db_mysql/row.c
    modules/db_mysql/row.h
    modules/db_mysql/val.c
    modules/db_mysql/val.h
    modules/db_oracle/asynch.c
    modules/db_oracle/asynch.h
    modules/db_oracle/db_oracle.c
    modules/db_oracle/dbase.c
    modules/db_oracle/dbase.h
    modules/db_oracle/ora_con.c
    modules/db_oracle/ora_con.h
    modules/db_oracle/res.c
    modules/db_oracle/res.h
    modules/db_oracle/val.c
    modules/db_oracle/val.h
    modules/db_perlvdb/perlvdb.c
    modules/db_perlvdb/perlvdb.h
    modules/db_perlvdb/perlvdb_conv.c
    modules/db_perlvdb/perlvdb_conv.h
    modules/db_perlvdb/perlvdb_oohelpers.c
    modules/db_perlvdb/perlvdb_oohelpers.h
    modules/db_perlvdb/perlvdbfunc.c
    modules/db_perlvdb/perlvdbfunc.h
    modules/db_postgres/db_postgres.c
    modules/db_postgres/dbase.c
    modules/db_postgres/dbase.h
    modules/db_postgres/pg_con.c
    modules/db_postgres/pg_con.h
    modules/db_postgres/pg_type.h
    modules/db_postgres/res.c
    modules/db_postgres/res.h
    modules/db_postgres/val.c
    modules/db_postgres/val.h
    modules/db_text/dbt_api.c
    modules/db_text/dbt_api.h
    modules/db_text/dbt_base.c
    modules/db_text/dbt_file.c
    modules/db_text/dbt_lib.c
    modules/db_text/dbt_lib.h
    modules/db_text/dbt_res.c
    modules/db_text/dbt_res.h
    modules/db_text/dbt_tb.c
    modules/db_text/dbt_util.c
    modules/db_text/dbt_util.h
    modules/db_text/dbtext.c
    modules/db_text/dbtext.h
    modules/db_unixodbc/con.c
    modules/db_unixodbc/con.h
    modules/db_unixodbc/db_unixodbc.c
    modules/db_unixodbc/db_unixodbc.h
    modules/db_unixodbc/dbase.c
    modules/db_unixodbc/dbase.h
    modules/db_unixodbc/list.c
    modules/db_unixodbc/list.h
    modules/db_unixodbc/res.c
    modules/db_unixodbc/res.h
    modules/db_unixodbc/row.c
    modules/db_unixodbc/row.h
    modules/db_unixodbc/val.c
    modules/db_unixodbc/val.h
    modules/db_virtual/db_virtual.c
    modules/db_virtual/db_virtual.h
    modules/db_virtual/dbase.c
    modules/db_virtual/dbase.h
    modules/dialog/dialog.c
    modules/dialog/dlg_cb.c
    modules/dialog/dlg_cb.h
    modules/dialog/dlg_db_handler.c
    modules/dialog/dlg_db_handler.h
    modules/dialog/dlg_handlers.c
    modules/dialog/dlg_handlers.h
    modules/dialog/dlg_hash.c
    modules/dialog/dlg_hash.h
    modules/dialog/dlg_load.h
    modules/dialog/dlg_profile.c
    modules/dialog/dlg_profile.h
    modules/dialog/dlg_replication.c
    modules/dialog/dlg_replication.h
    modules/dialog/dlg_req_within.c
    modules/dialog/dlg_req_within.h
    modules/dialog/dlg_timer.c
    modules/dialog/dlg_timer.h
    modules/dialog/dlg_tophiding.c
    modules/dialog/dlg_tophiding.h
    modules/dialog/dlg_vals.c
    modules/dialog/dlg_vals.h
    modules/dialplan/dialplan.c
    modules/dialplan/dialplan.h
    modules/dialplan/dp_db.c
    modules/dialplan/dp_db.h
    modules/dialplan/dp_repl.c
    modules/dispatcher/dispatch.c
    modules/dispatcher/dispatch.h
    modules/dispatcher/dispatcher.c
    modules/dispatcher/ds_bl.c
    modules/dispatcher/ds_bl.h
    modules/diversion/diversion.c
    modules/dns_cache/dns_cache.c
    modules/domain/api.c
    modules/domain/api.h
    modules/domain/domain.c
    modules/domain/domain.h
    modules/domain/domain_mod.c
    modules/domain/domain_mod.h
    modules/domain/hash.c
    modules/domain/hash.h
    modules/domain/mi.c
    modules/domain/mi.h
    modules/domainpolicy/domainpolicy.c
    modules/domainpolicy/domainpolicy.h
    modules/domainpolicy/domainpolicy_mod.c
    modules/domainpolicy/domainpolicy_mod.h
    modules/drouting/dr_bl.c
    modules/drouting/dr_bl.h
    modules/drouting/dr_db_def.c
    modules/drouting/dr_db_def.h
    modules/drouting/dr_load.c
    modules/drouting/dr_load.h
    modules/drouting/drouting.c
    modules/drouting/parse.h
    modules/drouting/prefix_tree.c
    modules/drouting/prefix_tree.h
    modules/drouting/routing.c
    modules/drouting/routing.h
    modules/enum/enum.c
    modules/enum/enum.h
    modules/enum/enum_mod.c
    modules/enum/enum_mod.h
    modules/event_datagram/event_datagram.c
    modules/event_datagram/event_datagram.h
    modules/event_rabbitmq/event_rabbitmq.c
    modules/event_rabbitmq/event_rabbitmq.h
    modules/event_rabbitmq/rabbitmq_send.c
    modules/event_rabbitmq/rabbitmq_send.h
    modules/event_route/event_route.c
    modules/event_route/event_route.h
    modules/event_xmlrpc/event_xmlrpc.c
    modules/event_xmlrpc/event_xmlrpc.h
    modules/event_xmlrpc/xmlrpc_send.c
    modules/event_xmlrpc/xmlrpc_send.h
    modules/exec/exec.c
    modules/exec/exec.h
    modules/exec/exec_hf.c
    modules/exec/exec_hf.h
    modules/exec/exec_mod.c
    modules/exec/kill.c
    modules/exec/kill.h
    modules/gflags/gflags.c
    modules/group/group.c
    modules/group/group.h
    modules/group/group_mod.c
    modules/group/group_mod.h
    modules/group/re_group.c
    modules/group/re_group.h
    modules/h350/h350_exp_fn.c
    modules/h350/h350_exp_fn.h
    modules/h350/h350_mod.c
    modules/h350/h350_mod.h
    modules/httpd/httpd.c
    modules/httpd/httpd_load.h
    modules/httpd/httpd_proc.c
    modules/httpd/httpd_proc.h
    modules/identity/identity.c
    modules/identity/identity.h
    modules/imc/imc.c
    modules/imc/imc.h
    modules/imc/imc_cmd.c
    modules/imc/imc_cmd.h
    modules/imc/imc_mng.c
    modules/imc/imc_mng.h
    modules/jabber/jabber.c
    modules/jabber/mdefines.h
    modules/jabber/sha.c
    modules/jabber/tree234.c
    modules/jabber/tree234.h
    modules/jabber/xjab_base.c
    modules/jabber/xjab_base.h
    modules/jabber/xjab_dmsg.h
    modules/jabber/xjab_jcon.c
    modules/jabber/xjab_jcon.h
    modules/jabber/xjab_jconf.c
    modules/jabber/xjab_jconf.h
    modules/jabber/xjab_load.c
    modules/jabber/xjab_load.h
    modules/jabber/xjab_presence.c
    modules/jabber/xjab_presence.h
    modules/jabber/xjab_util.c
    modules/jabber/xjab_util.h
    modules/jabber/xjab_wlist.c
    modules/jabber/xjab_worker.c
    modules/jabber/xjab_worker.h
    modules/jabber/xode.c
    modules/jabber/xode.h
    modules/jabber/xode_from.c
    modules/jabber/xode_str.c
    modules/jabber/xpool.c
    modules/jabber/xsnprintf.c
    modules/jabber/xstream.c
    modules/json/array_del.c
    modules/json/json.c
    modules/ldap/api.h
    modules/ldap/iniparser.c
    modules/ldap/iniparser.h
    modules/ldap/ld_session.c
    modules/ldap/ld_session.h
    modules/ldap/ldap_api_fn.c
    modules/ldap/ldap_api_fn.h
    modules/ldap/ldap_connect.c
    modules/ldap/ldap_connect.h
    modules/ldap/ldap_escape.c
    modules/ldap/ldap_escape.h
    modules/ldap/ldap_exp_fn.c
    modules/ldap/ldap_exp_fn.h
    modules/ldap/ldap_mod.c
    modules/load_balancer/lb_bl.c
    modules/load_balancer/lb_bl.h
    modules/load_balancer/lb_data.c
    modules/load_balancer/lb_data.h
    modules/load_balancer/lb_db.c
    modules/load_balancer/lb_db.h
    modules/load_balancer/lb_parser.c
    modules/load_balancer/lb_parser.h
    modules/load_balancer/lb_prober.c
    modules/load_balancer/lb_prober.h
    modules/load_balancer/load_balancer.c
    modules/lua/crc32.c
    modules/lua/crc32.h
    modules/lua/sipapi.c
    modules/lua/sipapi.h
    modules/lua/sipdatetime.c
    modules/lua/sipdatetime.h
    modules/lua/siplua.c
    modules/lua/siplua.h
    modules/lua/sipluafunc.c
    modules/lua/sipluafunc.h
    modules/lua/sipluami.c
    modules/lua/sipluami.h
    modules/lua/sipmemcache.c
    modules/lua/sipmemcache.h
    modules/lua/sipmysql.c
    modules/lua/sipmysql.h
    modules/lua/sipstate.c
    modules/lua/sipstate.h
    modules/lua/sipwatch.c
    modules/lua/sipwatch.h
    modules/mangler/common.h
    modules/mangler/contact_ops.c
    modules/mangler/contact_ops.h
    modules/mangler/ip_helper.c
    modules/mangler/ip_helper.h
    modules/mangler/mangler.c
    modules/mangler/mangler.h
    modules/mangler/sdp_mangler.c
    modules/mangler/sdp_mangler.h
    modules/mangler/utils.c
    modules/mangler/utils.h
    modules/mathops/math_funcs.c
    modules/mathops/math_funcs.h
    modules/mathops/mathops.c
    modules/maxfwd/maxfwd.c
    modules/maxfwd/mf_funcs.c
    modules/maxfwd/mf_funcs.h
    modules/mediaproxy/mediaproxy.c
    modules/mi_datagram/datagram_fnc.c
    modules/mi_datagram/datagram_fnc.h
    modules/mi_datagram/mi_datagram.c
    modules/mi_datagram/mi_datagram.h
    modules/mi_datagram/mi_datagram_parser.c
    modules/mi_datagram/mi_datagram_parser.h
    modules/mi_datagram/mi_datagram_writer.c
    modules/mi_datagram/mi_datagram_writer.h
    modules/mi_fifo/fifo_fnc.c
    modules/mi_fifo/fifo_fnc.h
    modules/mi_fifo/mi_fifo.c
    modules/mi_fifo/mi_fifo.h
    modules/mi_fifo/mi_parser.c
    modules/mi_fifo/mi_parser.h
    modules/mi_fifo/mi_writer.c
    modules/mi_fifo/mi_writer.h
    modules/mi_http/http_fnc.c
    modules/mi_http/http_fnc.h
    modules/mi_http/mi_http.c
    modules/mi_json/http_fnc.c
    modules/mi_json/http_fnc.h
    modules/mi_json/mi_json.c
    modules/mi_xmlrpc/abyss.h
    modules/mi_xmlrpc/abyss_conf.c
    modules/mi_xmlrpc/abyss_conn.c
    modules/mi_xmlrpc/abyss_conn.h
    modules/mi_xmlrpc/abyss_data.c
    modules/mi_xmlrpc/abyss_data.h
    modules/mi_xmlrpc/abyss_date.c
    modules/mi_xmlrpc/abyss_date.h
    modules/mi_xmlrpc/abyss_file.c
    modules/mi_xmlrpc/abyss_file.h
    modules/mi_xmlrpc/abyss_http.c
    modules/mi_xmlrpc/abyss_http.h
    modules/mi_xmlrpc/abyss_info.h
    modules/mi_xmlrpc/abyss_mallocvar.h
    modules/mi_xmlrpc/abyss_response.c
    modules/mi_xmlrpc/abyss_server.c
    modules/mi_xmlrpc/abyss_server.h
    modules/mi_xmlrpc/abyss_session.c
    modules/mi_xmlrpc/abyss_session.h
    modules/mi_xmlrpc/abyss_socket.c
    modules/mi_xmlrpc/abyss_socket.h
    modules/mi_xmlrpc/abyss_socket_unix.c
    modules/mi_xmlrpc/abyss_socket_unix.h
    modules/mi_xmlrpc/abyss_thread.h
    modules/mi_xmlrpc/abyss_thread_fork.c
    modules/mi_xmlrpc/abyss_token.c
    modules/mi_xmlrpc/abyss_token.h
    modules/mi_xmlrpc/abyss_trace.c
    modules/mi_xmlrpc/abyss_trace.h
    modules/mi_xmlrpc/abyss_xmlrpc_int.h
    modules/mi_xmlrpc/abyss_xmlrpc_server.c
    modules/mi_xmlrpc/mi_xmlrpc.c
    modules/mi_xmlrpc/mi_xmlrpc.h
    modules/mi_xmlrpc/xr_parser.c
    modules/mi_xmlrpc/xr_parser.h
    modules/mi_xmlrpc/xr_parser_lib.h
    modules/mi_xmlrpc/xr_server.c
    modules/mi_xmlrpc/xr_server.h
    modules/mi_xmlrpc/xr_writer.c
    modules/mi_xmlrpc/xr_writer.h
    modules/mi_xmlrpc_ng/http_fnc.c
    modules/mi_xmlrpc_ng/http_fnc.h
    modules/mi_xmlrpc_ng/mi_xmlrpc_http.c
    modules/mmgeoip/mmgeoip.c
    modules/msilo/ms_msg_list.c
    modules/msilo/ms_msg_list.h
    modules/msilo/msg_retry.c
    modules/msilo/msg_retry.h
        modules/msilo/ms_amqp.c
        modules/msilo/ms_amqp.h
    modules/msilo/msfuncs.c
    modules/msilo/msfuncs.h
    modules/msilo/msilo.c
     modules/msilo/common.h
     modules/msilo/cacheLogic/logic.hpp
     modules/msilo/cacheLogic/MessageListElement.cpp
     modules/msilo/cacheLogic/MessageListElement.hpp
     modules/msilo/cacheLogic/MessageThreadElement.cpp
     modules/msilo/cacheLogic/MessageThreadElement.hpp
     modules/msilo/cacheLogic/MessageThreadManager.cpp
     modules/msilo/cacheLogic/MessageThreadManager.hpp
     modules/msilo/cacheLogic/MessageThreadMap.cpp
     modules/msilo/cacheLogic/MessageThreadMap.hpp
     modules/msilo/cacheLogic/MessageThreadSender.cpp
     modules/msilo/cacheLogic/MessageThreadSender.hpp
     modules/msilo/cacheLogic/MessageThreadWrapper.cpp
     modules/msilo/cacheLogic/MessageThreadWrapper.h
     modules/msilo/cacheLogic/SenderJobQueue.cpp
     modules/msilo/cacheLogic/SenderJobQueue.hpp
     modules/msilo/cacheLogic/SipsHeapAllocator.hpp
     modules/msilo/cacheLogic/SipsSHMAllocator.hpp
    modules/nat_traversal/nat_traversal.c
    modules/nathelper/nathelper.c
    modules/nathelper/sip_pinger.h
    modules/options/mod_options.c
    modules/options/mod_options.h
    modules/osp/destination.c
    modules/osp/destination.h
    modules/osp/globals.c
    modules/osp/orig_transaction.c
    modules/osp/orig_transaction.h
    modules/osp/osp_mod.c
    modules/osp/osp_mod.h
    modules/osp/osptoolkit.c
    modules/osp/osptoolkit.h
    modules/osp/provider.c
    modules/osp/provider.h
    modules/osp/sipheader.c
    modules/osp/sipheader.h
    modules/osp/term_transaction.c
    modules/osp/term_transaction.h
    modules/osp/tm.c
    modules/osp/tm.h
    modules/osp/usage.c
    modules/osp/usage.h
    modules/path/path.c
    modules/path/path.h
    modules/path/path_mod.c
    modules/path/path_mod.h
    modules/pdt/pdt.c
    modules/pdt/pdtree.c
    modules/pdt/pdtree.h
    modules/peering/peering.c
    modules/peering/peering.h
    modules/peering/verify.c
    modules/peering/verify.h
    modules/perl/perl.c
    modules/perl/perl.h
    modules/perl/perlfunc.c
    modules/perl/perlfunc.h
    modules/permissions/address.c
    modules/permissions/address.h
    modules/permissions/hash.c
    modules/permissions/hash.h
    modules/permissions/mi.c
    modules/permissions/mi.h
    modules/permissions/parse_config.c
    modules/permissions/parse_config.h
    modules/permissions/permissions.c
    modules/permissions/permissions.h
    modules/permissions/rule.c
    modules/permissions/rule.h
    modules/pi_http/http_db_handler.c
    modules/pi_http/http_db_handler.h
    modules/pi_http/http_fnc.c
    modules/pi_http/http_fnc.h
    modules/pi_http/pi_http.c
    modules/pike/ip_tree.c
    modules/pike/ip_tree.h
    modules/pike/pike.c
    modules/pike/pike_funcs.c
    modules/pike/pike_funcs.h
    modules/pike/pike_mi.c
    modules/pike/pike_mi.h
    modules/pike/timer.c
    modules/pike/timer.h
    modules/presence/bind_presence.c
    modules/presence/bind_presence.h
    modules/presence/event_list.c
    modules/presence/event_list.h
    modules/presence/hash.c
    modules/presence/hash.h
    modules/presence/notify.c
    modules/presence/notify.h
    modules/presence/presence.c
    modules/presence/presence.h
    modules/presence/presentity.c
    modules/presence/presentity.h
    modules/presence/publish.c
    modules/presence/publish.h
    modules/presence/subscribe.c
    modules/presence/subscribe.h
    modules/presence/utils_func.c
    modules/presence/utils_func.h
    modules/presence_callinfo/add_events.c
    modules/presence_callinfo/add_events.h
    modules/presence_callinfo/presence_callinfo.c
    modules/presence_callinfo/presence_callinfo.h
    modules/presence_callinfo/sca_dialog.c
    modules/presence_callinfo/sca_dialog.h
    modules/presence_callinfo/sca_hash.c
    modules/presence_callinfo/sca_hash.h
    modules/presence_dialoginfo/add_events.c
    modules/presence_dialoginfo/add_events.h
    modules/presence_dialoginfo/notify_body.c
    modules/presence_dialoginfo/notify_body.h
    modules/presence_dialoginfo/pidf.c
    modules/presence_dialoginfo/pidf.h
    modules/presence_dialoginfo/presence_dialoginfo.c
    modules/presence_dialoginfo/presence_dialoginfo.h
    modules/presence_mwi/add_events.c
    modules/presence_mwi/add_events.h
    modules/presence_mwi/presence_mwi.c
    modules/presence_mwi/presence_mwi.h
    modules/presence_xcapdiff/presence_xcapdiff.c
    modules/presence_xml/add_events.c
    modules/presence_xml/add_events.h
    modules/presence_xml/notify_body.c
    modules/presence_xml/notify_body.h
    modules/presence_xml/pidf.c
    modules/presence_xml/pidf.h
    modules/presence_xml/presence_xml.c
    modules/presence_xml/presence_xml.h
    modules/presence_xml/xcap_auth.c
    modules/presence_xml/xcap_auth.h
    modules/pua/add_events.c
    modules/pua/add_events.h
    modules/pua/event_list.c
    modules/pua/event_list.h
    modules/pua/hash.c
    modules/pua/hash.h
    modules/pua/pidf.c
    modules/pua/pidf.h
    modules/pua/pua.c
    modules/pua/pua.h
    modules/pua/pua_bind.c
    modules/pua/pua_bind.h
    modules/pua/pua_callback.c
    modules/pua/pua_callback.h
    modules/pua/send_publish.c
    modules/pua/send_publish.h
    modules/pua/send_subscribe.c
    modules/pua/send_subscribe.h
    modules/pua/uri_list.h
    modules/pua_bla/notify.c
    modules/pua_bla/pua_bla.c
    modules/pua_bla/pua_bla.h
    modules/pua_bla/registrar_cb.c
    modules/pua_bla/registrar_cb.h
    modules/pua_dialoginfo/dialog_publish.c
    modules/pua_dialoginfo/pua_dialoginfo.c
    modules/pua_dialoginfo/pua_dialoginfo.h
    modules/pua_mi/mi_func.c
    modules/pua_mi/mi_func.h
    modules/pua_mi/pua_mi.c
    modules/pua_mi/pua_mi.h
    modules/pua_usrloc/pua_usrloc.c
    modules/pua_usrloc/pua_usrloc.h
    modules/pua_usrloc/ul_publish.c
    modules/pua_xmpp/pidf.c
    modules/pua_xmpp/pidf.h
    modules/pua_xmpp/pua_xmpp.c
    modules/pua_xmpp/pua_xmpp.h
    modules/pua_xmpp/request_winfo.c
    modules/pua_xmpp/request_winfo.h
    modules/pua_xmpp/simple2xmpp.c
    modules/pua_xmpp/simple2xmpp.h
    modules/pua_xmpp/xmpp2simple.c
    modules/pua_xmpp/xmpp2simple.h
    modules/python/python_exec.c
    modules/python/python_exec.h
    modules/python/python_iface.c
    modules/python/python_iface.h
    modules/python/python_mod.c
    modules/python/python_mod.h
    modules/python/python_msgobj.c
    modules/python/python_msgobj.h
    modules/python/python_support.c
    modules/python/python_support.h
    modules/qos/qos.c
    modules/qos/qos_cb.c
    modules/qos/qos_cb.h
    modules/qos/qos_ctx_helpers.c
    modules/qos/qos_ctx_helpers.h
    modules/qos/qos_handlers.c
    modules/qos/qos_handlers.h
    modules/qos/qos_load.h
    modules/qos/qos_mi.c
    modules/qos/qos_mi.h
    modules/ratelimit/ratelimit.c
    modules/ratelimit/ratelimit.h
    modules/ratelimit/ratelimit_helper.c
    modules/regex/regex_mod.c
    modules/registrar/common.c
    modules/registrar/common.h
    modules/registrar/lookup.c
    modules/registrar/lookup.h
    modules/registrar/path.c
    modules/registrar/path.h
    modules/registrar/reg_mod.c
    modules/registrar/reg_mod.h
    modules/registrar/regtime.c
    modules/registrar/regtime.h
    modules/registrar/reply.c
    modules/registrar/reply.h
    modules/registrar/rerrno.c
    modules/registrar/rerrno.h
    modules/registrar/save.c
    modules/registrar/save.h
    modules/registrar/sip_msg.c
    modules/registrar/sip_msg.h
    modules/rest_client/rest_cb.c
    modules/rest_client/rest_cb.h
    modules/rest_client/rest_client.c
    modules/rest_client/rest_methods.c
    modules/rest_client/rest_methods.h
    modules/rls/notify.c
    modules/rls/notify.h
    modules/rls/resource_notify.c
    modules/rls/resource_notify.h
    modules/rls/rls.c
    modules/rls/rls.h
    modules/rls/subscribe.c
    modules/rls/subscribe.h
    modules/rr/api.c
    modules/rr/api.h
    modules/rr/loose.c
    modules/rr/loose.h
    modules/rr/record.c
    modules/rr/record.h
    modules/rr/rr_cb.c
    modules/rr/rr_cb.h
    modules/rr/rr_mod.c
    modules/rr/rr_mod.h
    modules/rtpproxy/nhelpr_funcs.c
    modules/rtpproxy/nhelpr_funcs.h
    modules/rtpproxy/rtpproxy.c
    modules/rtpproxy/rtpproxy.h
    modules/rtpproxy/rtpproxy_callbacks.c
    modules/rtpproxy/rtpproxy_callbacks.h
    modules/rtpproxy/rtpproxy_stream.c
    modules/rtpproxy/rtpproxy_stream.h
    modules/rtpproxy/timeout_process.c
    modules/script_helper/script_helper.c
    modules/seas/cluster.c
    modules/seas/cluster.h
    modules/seas/encode_allow.c
    modules/seas/encode_allow.h
    modules/seas/encode_contact.c
    modules/seas/encode_contact.h
    modules/seas/encode_content_disposition.c
    modules/seas/encode_content_disposition.h
    modules/seas/encode_content_length.c
    modules/seas/encode_content_length.h
    modules/seas/encode_content_type.c
    modules/seas/encode_content_type.h
    modules/seas/encode_cseq.c
    modules/seas/encode_cseq.h
    modules/seas/encode_digest.c
    modules/seas/encode_digest.h
    modules/seas/encode_expires.c
    modules/seas/encode_expires.h
    modules/seas/encode_header.c
    modules/seas/encode_header.h
    modules/seas/encode_msg.c
    modules/seas/encode_msg.h
    modules/seas/encode_parameters.c
    modules/seas/encode_parameters.h
    modules/seas/encode_route.c
    modules/seas/encode_route.h
    modules/seas/encode_to_body.c
    modules/seas/encode_to_body.h
    modules/seas/encode_uri.c
    modules/seas/encode_uri.h
    modules/seas/encode_via.c
    modules/seas/encode_via.h
    modules/seas/event_dispatcher.c
    modules/seas/event_dispatcher.h
    modules/seas/ha.c
    modules/seas/ha.h
    modules/seas/seas.c
    modules/seas/seas.h
    modules/seas/seas_action.c
    modules/seas/seas_action.h
    modules/seas/seas_error.h
    modules/seas/statistics.c
    modules/seas/statistics.h
    modules/seas/utils.c
    modules/seas/utils.h
    modules/seas/xaddress.h
    modules/signaling/signaling.c
    modules/signaling/signaling.h
    modules/sipcapture/sipcapture.c
    modules/sipcapture/sipcapture.h
    modules/sipmsgops/codecs.c
    modules/sipmsgops/codecs.h
    modules/sipmsgops/sipmsgops.c
    modules/siptrace/siptrace.c
    modules/sl/sl.c
    modules/sl/sl.h
    modules/sl/sl_api.h
    modules/sl/sl_cb.c
    modules/sl/sl_cb.h
    modules/sl/sl_funcs.c
    modules/sl/sl_funcs.h
    modules/sms/libsms_charset.c
    modules/sms/libsms_charset.h
    modules/sms/libsms_getsms.c
    modules/sms/libsms_modem.c
    modules/sms/libsms_modem.h
    modules/sms/libsms_putsms.c
    modules/sms/libsms_sms.h
    modules/sms/sms.c
    modules/sms/sms_funcs.c
    modules/sms/sms_funcs.h
    modules/sms/sms_report.c
    modules/sms/sms_report.h
    modules/sngtc/sngtc.c
    modules/sngtc/sngtc.h
    modules/sngtc/sngtc_proc.c
    modules/sngtc/sngtc_proc.h
    modules/snmpstats/alarm_checks.c
    modules/snmpstats/alarm_checks.h
    modules/snmpstats/hashTable.c
    modules/snmpstats/hashTable.h
    modules/snmpstats/interprocess_buffer.c
    modules/snmpstats/interprocess_buffer.h
    modules/snmpstats/openserMIBNotifications.c
    modules/snmpstats/openserMIBNotifications.h
    modules/snmpstats/openserObjects.c
    modules/snmpstats/openserObjects.h
    modules/snmpstats/openserSIPCommonObjects.c
    modules/snmpstats/openserSIPCommonObjects.h
    modules/snmpstats/openserSIPContactTable.c
    modules/snmpstats/openserSIPContactTable.h
    modules/snmpstats/openserSIPMethodSupportedTable.c
    modules/snmpstats/openserSIPMethodSupportedTable.h
    modules/snmpstats/openserSIPPortTable.c
    modules/snmpstats/openserSIPPortTable.h
    modules/snmpstats/openserSIPRegUserLookupTable.c
    modules/snmpstats/openserSIPRegUserLookupTable.h
    modules/snmpstats/openserSIPRegUserTable.c
    modules/snmpstats/openserSIPRegUserTable.h
    modules/snmpstats/openserSIPServerObjects.c
    modules/snmpstats/openserSIPServerObjects.h
    modules/snmpstats/openserSIPStatusCodesTable.c
    modules/snmpstats/openserSIPStatusCodesTable.h
    modules/snmpstats/snmpstats.c
    modules/snmpstats/snmpstats.h
    modules/snmpstats/snmpstats_globals.h
    modules/snmpstats/sub_agent.c
    modules/snmpstats/sub_agent.h
    modules/snmpstats/utilities.c
    modules/snmpstats/utilities.h
    modules/speeddial/sdlookup.c
    modules/speeddial/sdlookup.h
    modules/speeddial/speeddial.c
    modules/speeddial/speeddial.h
    modules/sst/sst.c
    modules/sst/sst_handlers.c
    modules/sst/sst_handlers.h
    modules/sst/sst_mi.c
    modules/sst/sst_mi.h
    modules/statistics/statistics.c
    modules/statistics/stats_funcs.c
    modules/statistics/stats_funcs.h
    modules/stun/stun.c
    modules/stun/stun.h
    modules/textops/textops.c
    modules/tlsops/tls_select.c
    modules/tlsops/tls_select.h
    modules/tlsops/tlsops.c
    modules/tlsops/tlsops.h
    modules/tm/callid.c
    modules/tm/callid.h
    modules/tm/config.h
    modules/tm/dlg.c
    modules/tm/dlg.h
    modules/tm/fix_lumps.h
    modules/tm/h_table.c
    modules/tm/h_table.h
    modules/tm/lock.c
    modules/tm/lock.h
    modules/tm/mi.c
    modules/tm/mi.h
    modules/tm/sip_msg.c
    modules/tm/sip_msg.h
    modules/tm/t_cancel.c
    modules/tm/t_cancel.h
    modules/tm/t_dlg.c
    modules/tm/t_dlg.h
    modules/tm/t_fifo.c
    modules/tm/t_fifo.h
    modules/tm/t_funcs.c
    modules/tm/t_funcs.h
    modules/tm/t_fwd.c
    modules/tm/t_fwd.h
    modules/tm/t_hooks.c
    modules/tm/t_hooks.h
    modules/tm/t_lookup.c
    modules/tm/t_lookup.h
    modules/tm/t_msgbuilder.c
    modules/tm/t_msgbuilder.h
    modules/tm/t_reply.c
    modules/tm/t_reply.h
    modules/tm/t_stats.h
    modules/tm/timer.c
    modules/tm/timer.h
    modules/tm/tm.c
    modules/tm/tm_load.h
    modules/tm/uac.c
    modules/tm/uac.h
    modules/tm/ut.h
    modules/uac/auth.c
    modules/uac/replace.c
    modules/uac/replace.h
    modules/uac/uac.c
    modules/uac_auth/auth.c
    modules/uac_auth/uac_auth.c
    modules/uac_auth/uac_auth.h
    modules/uac_redirect/rd_filter.c
    modules/uac_redirect/rd_filter.h
    modules/uac_redirect/rd_funcs.c
    modules/uac_redirect/rd_funcs.h
    modules/uac_redirect/redirect.c
    modules/uac_registrant/reg_db_handler.c
    modules/uac_registrant/reg_db_handler.h
    modules/uac_registrant/reg_records.c
    modules/uac_registrant/reg_records.h
    modules/uac_registrant/registrant.c
    modules/uri/aaa_checks.c
    modules/uri/aaa_checks.h
    modules/uri/checks.c
    modules/uri/checks.h
    modules/uri/db_checks.c
    modules/uri/db_checks.h
    modules/uri/uri_mod.c
    modules/uri/uri_mod.h
    modules/userblacklist/db.c
    modules/userblacklist/db.h
    modules/userblacklist/dt.c
    modules/userblacklist/dt.h
    modules/userblacklist/userblacklist.c
    modules/usrloc/dlist.c
    modules/usrloc/dlist.h
    modules/usrloc/hslot.c
    modules/usrloc/hslot.h
    modules/usrloc/ucontact.c
    modules/usrloc/ucontact.h
    modules/usrloc/udomain.c
    modules/usrloc/udomain.h
    modules/usrloc/ul_callback.c
    modules/usrloc/ul_callback.h
    modules/usrloc/ul_mi.c
    modules/usrloc/ul_mi.h
    modules/usrloc/ul_mod.c
    modules/usrloc/ul_mod.h
    modules/usrloc/urecord.c
    modules/usrloc/urecord.h
    modules/usrloc/ureplication.c
    modules/usrloc/ureplication.h
    modules/usrloc/usrloc.c
    modules/usrloc/usrloc.h
    modules/usrloc/utime.c
    modules/usrloc/utime.h
    modules/xcap/api.c
    modules/xcap/api.h
    modules/xcap/doc.c
    modules/xcap/doc.h
    modules/xcap/uri.c
    modules/xcap/uri.h
    modules/xcap/util.h
    modules/xcap/xcap_mod.c
    modules/xcap/xcap_mod.h
    modules/xcap_client/xcap_callbacks.c
    modules/xcap_client/xcap_callbacks.h
    modules/xcap_client/xcap_client.c
    modules/xcap_client/xcap_client.h
    modules/xcap_client/xcap_functions.c
    modules/xcap_client/xcap_functions.h
    modules/xmpp/network.c
    modules/xmpp/network.h
    modules/xmpp/sha.c
    modules/xmpp/util.c
    modules/xmpp/xmpp.c
    modules/xmpp/xmpp.h
    modules/xmpp/xmpp_api.c
    modules/xmpp/xmpp_api.h
    modules/xmpp/xmpp_component.c
    modules/xmpp/xmpp_server.c
    modules/xmpp/xode.c
    modules/xmpp/xode.h
    modules/xmpp/xode_from.c
    modules/xmpp/xode_str.c
    modules/xmpp/xpool.c
    modules/xmpp/xsnprintf.c
    modules/xmpp/xstream.c
    parser/contact/contact.c
    parser/contact/contact.h
    parser/contact/parse_contact.c
    parser/contact/parse_contact.h
    parser/digest/digest.c
    parser/digest/digest.h
    parser/digest/digest_keys.h
    parser/digest/digest_parser.c
    parser/digest/digest_parser.h
    parser/digest/param_parser.c
    parser/digest/param_parser.h
    parser/sdp/sdp.c
    parser/sdp/sdp.h
    parser/sdp/sdp_cloner.h
    parser/sdp/sdp_helpr_funcs.c
    parser/sdp/sdp_helpr_funcs.h
    parser/case_acce.h
    parser/case_allo.h
    parser/case_auth.h
    parser/case_call.h
    parser/case_cont.h
    parser/case_cseq.h
    parser/case_dive.h
    parser/case_even.h
    parser/case_expi.h
    parser/case_from.h
    parser/case_max.h
    parser/case_min_.h
    parser/case_orga.h
    parser/case_p_as.h
    parser/case_p_pr.h
    parser/case_path.h
    parser/case_prio.h
    parser/case_priv.h
    parser/case_prox.h
    parser/case_reco.h
    parser/case_refe.h
    parser/case_remo.h
    parser/case_requ.h
    parser/case_retr.h
    parser/case_rout.h
    parser/case_sess.h
    parser/case_sip.h
    parser/case_subj.h
    parser/case_supp.h
    parser/case_to.h
    parser/case_unsu.h
    parser/case_user.h
    parser/case_via.h
    parser/case_www.h
    parser/hf.c
    parser/hf.h
    parser/keys.h
    parser/msg_parser.c
    parser/msg_parser.h
    parser/parse_allow.c
    parser/parse_allow.h
    parser/parse_authenticate.c
    parser/parse_authenticate.h
    parser/parse_call_info.c
    parser/parse_call_info.h
    parser/parse_content.c
    parser/parse_content.h
    parser/parse_cseq.c
    parser/parse_cseq.h
    parser/parse_def.h
    parser/parse_disposition.c
    parser/parse_disposition.h
    parser/parse_diversion.c
    parser/parse_diversion.h
    parser/parse_event.c
    parser/parse_event.h
    parser/parse_expires.c
    parser/parse_expires.h
    parser/parse_fline.c
    parser/parse_fline.h
    parser/parse_from.c
    parser/parse_from.h
    parser/parse_hname2.c
    parser/parse_hname2.h
    parser/parse_methods.c
    parser/parse_methods.h
    parser/parse_min_expires.c
    parser/parse_min_expires.h
    parser/parse_multipart.c
    parser/parse_multipart.h
    parser/parse_nameaddr.c
    parser/parse_nameaddr.h
    parser/parse_pai.c
    parser/parse_pai.h
    parser/parse_param.c
    parser/parse_param.h
    parser/parse_ppi.c
    parser/parse_ppi.h
    parser/parse_privacy.c
    parser/parse_privacy.h
    parser/parse_refer_to.c
    parser/parse_refer_to.h
    parser/parse_replaces.c
    parser/parse_replaces.h
    parser/parse_rpid.c
    parser/parse_rpid.h
    parser/parse_rr.c
    parser/parse_rr.h
    parser/parse_sipifmatch.c
    parser/parse_sipifmatch.h
    parser/parse_sst.c
    parser/parse_sst.h
    parser/parse_supported.c
    parser/parse_supported.h
    parser/parse_to.c
    parser/parse_to.h
    parser/parse_uri.c
    parser/parse_uri.h
    parser/parse_via.c
    parser/parse_via.h
    parser/parser_f.c
    parser/parser_f.h
    tls/tls_config.c
    tls/tls_config.h
    tls/tls_domain.c
    tls/tls_domain.h
    tls/tls_init.c
    tls/tls_init.h
    tls/tls_server.c
    tls/tls_server.h
    utils/db_berkeley/bdb_recover.c
    utils/db_berkeley/bdb_recover.h
    utils/db_oracle/getres.c
    utils/db_oracle/orasel.c
    utils/db_oracle/orasel.h
    utils/db_oracle/outres.c
    utils/db_oracle/selcon.c
    utils/db_oracle/util.c
    utils/opensipsunix/opensipsunix.c
    action.c
    action.h
    atomic.h
    bin_interface.c
    bin_interface.h
    blacklists.c
    blacklists.h
    cfg.tab.c
    cfg.tab.h
    config.h
    core_stats.c
    core_stats.h
    crc.c
    crc.h
    daemonize.c
    daemonize.h
    data_lump.c
    data_lump.h
    data_lump_rpl.c
    data_lump_rpl.h
    dprint.c
    dprint.h
    dset.c
    dset.h
    errinfo.c
    errinfo.h
    error.c
    error.h
    fastlock.h
    flags.c
    flags.h
    forward.c
    forward.h
    futex_lock.h
    globals.h
    hash_func.h
    help_msg.h
    io_wait.c
    io_wait.h
    ip_addr.c
    ip_addr.h
    lex.yy.c
    lock_alloc.h
    lock_ops.h
    locking.h
    lump_struct.h
    main.c
    map.c
    map.h
    md5.c
    md5.h
    md5global.h
    md5utils.c
    md5utils.h
    mod_fix.c
    mod_fix.h
    modparam.c
    modparam.h
    msg_callbacks.c
    msg_callbacks.h
    msg_translator.c
    msg_translator.h
    name_alias.c
    name_alias.h
    pass_fd.c
    pass_fd.h
    poll_types.h
    prime_hash.c
    prime_hash.h
    proxy.c
    proxy.h
    pt.c
    pt.h
    pvar.c
    pvar.h
    qvalue.c
    qvalue.h
    radius.h
    re.c
    re.h
    receive.c
    receive.h
    regexp.c
    regexp.h
    resolve.c
    resolve.h
    route.c
    route.h
    route_struct.c
    route_struct.h
    rw_locking.h
    script_cb.c
    script_cb.h
    script_var.c
    script_var.h
    sctp_server.c
    sctp_server.h
    serialize.c
    serialize.h
    sliblist.c
    sliblist.h
    socket_info.c
    socket_info.h
    sr_module.c
    sr_module.h
    statistics.c
    statistics.h
    str.h
    strcommon.c
    strcommon.h
    tags.h
    tcp_conn.h
    tcp_init.h
    tcp_main.c
    tcp_read.c
    tcp_server.h
    time_rec.c
    time_rec.h
    timer.c
    timer.h
    transformations.c
    transformations.h
    trim.h
    tsend.c
    tsend.h
    udp_server.c
    udp_server.h
    usr_avp.c
    usr_avp.h
    ut.c
    ut.h
    version.h
    xlog.c
    xlog.h modules/msilo/cacheLogic/logic.cpp modules/msilo/cacheLogic/common.h modules/msilo/cacheLogic/SipsAllocator.hpp modules/msilo/cacheLogic/MessageListElementWrapper.cpp modules/msilo/cacheLogic/MessageListElementWrapper.hpp modules/msilo/cacheLogic/ApiHelper.cpp modules/msilo/cacheLogic/ApiHelper.hpp modules/msilo/cacheLogic/apiDeps.h modules/msilo/msg_retry.c modules/msilo/msg_retry.h modules/msilo/ms_amqp.h modules/msilo/ms_amqp.c modules/msilo/msilo.h.h modules/msilo/msilo.h modules/msilo/ms_amqp.c modules/msilo/ms_amqp.h)

add_executable(opensips_1_11_2_tls ${SOURCE_FILES})
target_link_libraries(opensips_1_11_2_tls ${Boost_LIBRARIES})